<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">baby</string>
    <string name="account_bind">帐号绑定</string>
    <string name="account_bind_success">绑定成功</string>
    <string name="unbind">解除绑定</string>
    <string name="unbind_promt">您确定解除绑定吗?</string>
    <string name="weibo_content_is_empty">内容不能为空!</string>
    <string name="weibo_content_too_long">内容不能超过140个中文!</string>
    <string name="weibo_auth_faild">认证失败,请重新认证.</string>
    <string name="weibo_repeat_content">相同内容请间隔10分钟再进行发布哦!</string>
    <string name="weibo_bind_faild">绑定失败</string>
    <string name="weibo_over_the_unaudited">未审核的应用使用人数超过限制</string>
    
    <string name="loading">正在加载...</string>
    <string name="load_more">获取更多</string>
    <string name="load_all">全部加载完毕</string>
    <string name="NoSignalException">无法连接到网络，请检查网络配置</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="msg">提示</string>
    <string name="logout">确定退出本应用?</string>
    <string name="try_again_logout">再按一次退出程序</string>
    <string name="logo_text">X&#160;X&#160;随&#160;访&#160;助&#160;手</string>
    <string name="json_exception">json解析错误</string>
    <string name="connect_server_exception">服务器连接失败</string>
    
    <string name="change_password">修改密码</string>
    <string name="change_inform">修改资料</string>
    
    <string name="setting">设置</string>
    <string name="setting_activity_grade">给我评分</string>
    <string name="setting_activity_opinion">意见反馈</string>
    <string name="setting_activity_version">新版本检测</string>
    <string name="setting_activity_ver">V1.0</string>
    <string name="setting_activity_btnright">></string>   
	<string name="setting_activity_about">关于</string>
    <string name="setting_activity_exit">退出当前账号</string>
    
    <string name="doctor_home_creat">创建婴儿账户</string>
    <string name="doctor_home_title">营养随访体系</string>
    
    <string name="doctor_my_title">个人中心</string>
    <string name="doctor_my_inform">我的资料</string>
    <string name="doctor_my_id">医生ID</string>
    <string name="doctor_my_name">医生名</string>
    <string name="doctor_my_region">所在地区</string>
    <string name="doctor_my_hospital">所属医院</string>
    <string name="doctor_my_branch">所属科室</string>
    <string name="doctor_my_postition">职称</string>
    <string name="doctor_my_collect">我的收藏</string>
    <string name="doctor_my_email">邮箱</string>
    <string name="doctor_my_phone">手机</string>
  
    <string name="doctor_my_change_inform_picture">修改头像</string>
    
    <string name="btn_back">Back</string>
    <string name="btn_end">完成</string>
    
    <string name="doctor_my_changepw">修改密码</string>
    <string name="doctor_my_changepw_old">旧密码：</string>
    <string name="doctor_my_changepw_new">新密码：</string>
    <string name="doctor_my_changepw_confirm">确认新密码：</string>
    
    <string name="academic_abstract_collect">&#160;&#160;收&#160;&#160;&#160;&#160;藏&#160;&#160;</string>
    <string name="doctor_my_collect_cancel">取消收藏</string>
    <string name="doctor_my_collect_share">分享</string>
    <string name="doctor_my_collect_title">新生儿的营养和需要量 </string>

    <string name="academic_abstract_title">学术文摘</string>
    <string name="meeting_notify_title">会议通知</string>
    <string name="manage_man">管理员</string>

    <string name="baby_parent_phone">家长手机号</string>
    <string name="baby_my_id">婴儿ID</string>
    <string name="baby_my_name">婴儿名：</string>
    <string name="baby_my_gender">性别：</string>
    <string name="baby_my_preproduction">预产期：</string>
    <string name="baby_my_height">出生身长：</string>
    <string name="baby_my_weight">出生体重：</string>
    <string name="baby_my_head_circumference">出生头围：</string>
    <string name="baby_my_delivery_way">分娩方式：</string>
    <string name="baby_complication">合并症：</string>
    <string name="baby_my_apgar">Apgar评分：</string>
    
    
    <string name="baby_parents_phone">家长手机号 :</string>
    <string name="baby_commit">合并症</string>
    
    <string name="baby_fitment_activity">育儿指南</string>
    
    <string name="baby_detail_title">育儿指南详情</string>
    <!-- “搜索”界面 -->
    <string name="search_key">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;关键字:</string>
    <string name="search_time">婴儿出生时间段:</string>
    <string name="search_to">到</string>
    <string name="search_history">历史搜索：</string>
    <string name="search_button">搜索</string>
    <string name="search_clean">清除历史</string>
    <!-- “新增随访记录”界面 -->
    <string name="add_visit_record">新增随访记录</string>
    <string name="add_visit_record_time">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;测量日期:</string>
    <string name="add_visit_record_weight">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;体重:</string>
    <string name="add_visit_record_height">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;身长:</string>
    <string name="add_visit_record_head">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;头围:</string>
    <string name="add_visit_record_feed1">&#160;&#160;&#160;&#160;母乳喂养量:</string>
    <string name="add_visit_record_milk">&#160;&#160;&#160;&#160;配方奶种类:</string>
    <string name="add_visit_record_feed2">配方奶喂养量:</string>
    
    <!-- “配方奶”界面 -->  
    <string name="choose_milk_yard">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;院内/外：</string>
    <string name="choose_milk_brand">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;品牌：</string>
    <string name="choose_milk_kind">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;种类：</string>
    <string name="choose_milk_add_milk">新增配方奶</string>
    <string name="choose_milk_check">查看营养数据</string>
    <!-- 单位 -->
    <string name="g">g</string>
    <string name="cm">cm</string>
    <string name="ml">ml</string>
    <string name="day">天</string>
    <string name="kkd">kcal/kg/day</string>
    <string name="mkd">mg/kg/day</string>
    <string name="mlkd">ml/kg/day</string>
    <string name="choice">选择</string>
    <string name="change">修改</string>
    <string name="must_fill">(必填)</string>
    <string name="km">kcal/100ml</string>
    <string name="gm">g/100ml</string>
    
    <!-- 婴儿“修改资料”界面 -->
    <string name="doctor_creat_phone">家长手机号:</string>
    <string name="doctor_creat_name">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;婴儿名:</string>
    <string name="doctor_creat_start_pw">&#160;&#160;&#160;&#160;初始密码:</string>
    <string name="doctor_creat_end_pw">&#160;&#160;&#160;&#160;确认密码:</string>
    <string name="doctor_creat_gender">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;性别:</string>
    <string name="doctor_creat_parturition_time">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;预产期:</string>
    <string name="doctor_creat_birthday">&#160;&#160;&#160;&#160;出生日期:</string>
    <string name="doctor_creat_weight">&#160;&#160;&#160;&#160;出生体重:</string>
    <string name="doctor_creat_height">&#160;&#160;&#160;&#160;出生身长:</string>
    <string name="doctor_creat_head">&#160;&#160;&#160;&#160;出生头围:</string>
    <string name="doctor_creat_way">&#160;&#160;&#160;&#160;分娩方式:</string>
    <string name="doctor_creat_complication">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;合并症:</string>
    <string name="doctor_creat_recover_days">恢复出生体重天数:</string>
    <string name="doctor_creat_apgar">Apgar评分:</string>
    <string name="doctor_creat_grow_measure">出长参考标准:</string>
    <string name="doctor_creat_choice1">WHO</string>
    <string name="doctor_creat_choice2">九城</string>
    <string name="doctor_creat_choice3">上海</string>
    
    
  <!-- 婴儿状态总结(随访记录“分析”界面) -->
    <string name="baby_status_gap">营养差距></string>
    <string name="baby_status_energy_gap">能量差距</string>
    <string name="baby_status_protein_gap">蛋白质差距</string>
    <string name="baby_status_in_milk_gap">低出生体重儿院内专用配方奶喂养差距</string>
    <string name="baby_status_out_milk_gap">早产儿出院后专用配方奶喂养差距</string>
    <string name="baby_status_need">营养需求></string>
    <string name="baby_status_energy_need">能量需求</string>
    <string name="baby_status_protein_need">蛋白质需求</string>
    <string name="baby_status_feed_need">喂养量需求</string>
    <string name="baby_status_feed_meet">母乳喂养满足生长需求</string>
    <string name="baby_status_in_milk_need">低出生体重儿院内专用配方奶喂养满足生长需求</string>
    <string name="baby_status_out_milk_need">早产儿出院后专用配方奶喂养满足生长需求</string>
    <string name="baby_status_sumup">营养总结：</string>
    
    <!-- 新增”配方奶“界面 -->
    <string name="add_milk_in">院内</string>
    <string name="add_milk_out">院外</string>
    <string name="add_milk_brand1">惠氏</string>
    <string name="add_milk_brand2">品牌A</string>
    <string name="add_milk_brand3">品牌B</string>
    <string name="add_milk_brand_other">其他</string>
    <string name="add_milk_energy">能量：</string>
    <string name="add_milk_protein">蛋白质：</string>
    <string name="add_milk_carbohydrate">碳水化合物：</string>
    <string name="add_milk_fat">脂肪：</string>
</resources>