<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:background="#758AA6">
    <Button 
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_back"/>
  <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"       
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/doctor_my_changepw"
        android:textColor="#FFFFFF" />  
        <Button 
            android:id="@+id/btnEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_end"/>
        </LinearLayout>
        
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
    <TextView
        android:layout_width="0dp"
    	android:layout_height="wrap_content"
    	android:layout_weight="1"
    	android:text="@string/doctor_my_changepw_old"/>
    <EditText 
        android:id="@+id/etDoctor_my_new_password"
        android:layout_width="0dp"
    	android:layout_height="wrap_content"
    	android:layout_weight="2.5"
    	/>
        
    </LinearLayout>
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
    <TextView
        android:layout_width="0dp"
    	android:layout_height="wrap_content"
    	android:layout_weight="1"
    	android:text="@string/doctor_my_changepw_new"/>
    <EditText 
        android:id="@+id/etDoctor_my_new_password"
        android:layout_width="0dp"
    	android:layout_height="wrap_content"
    	android:layout_weight="2.5"
    	/>
        
    </LinearLayout>
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
    <TextView
        android:layout_width="0dp"
    	android:layout_height="wrap_content"
    	android:layout_weight="1"
    	android:text="@string/doctor_my_changepw_confirm"/>
    <EditText 
        android:id="@+id/etDoctor_my_confirm_password"
        android:layout_width="0dp"
    	android:layout_height="wrap_content"
    	android:layout_weight="2.5"
    	/>
        
    </LinearLayout>
</LinearLayout>
</LinearLayout>