<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#758AA6" >
    <Button 
        android:id="@+id/btnBack"
    	android:layout_width="0dp"
    	android:layout_height="wrap_content"
    	android:layout_weight="1"
    	android:text="@string/btn_back"/>
	<TextView
        android:layout_width="0dp"
    	android:layout_height="wrap_content"
    	android:layout_weight="4"   
    	android:gravity="center"     
        android:text="@string/baby_detail_title"
        android:textColor="#FFFFFF" />  
    <TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="#758AA6"/>

</LinearLayout>

<TextView
    android:id="@+id/tvDetailDate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="6dp"
    android:background="@drawable/bg_setting"
    android:text="2013/9/2" />
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginBottom="10dp">
	<TextView
	    android:id="@+id/tvDetailImage"
        android:layout_width="wrap_content"
    	android:layout_height="match_parent"  
    	android:layout_marginRight="6dp"    	
    	android:drawableTop="@drawable/ic_launcher"    
        android:text="@string/manage_man"/>  
    <EditText
        android:id="@+id/etDetail"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"/>

</LinearLayout>

</LinearLayout>