<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#758AA6"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/doctor_my_title"
        android:textColor="#FFFFFF" />
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="2"
     android:background="@drawable/baby"
     android:orientation="vertical" >

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginLeft="20dp"
     	android:layout_marginRight="20dp"        
        android:orientation="horizontal" >

		<ImageView
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:src="@drawable/pic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_gravity="center"
            android:text="王XX"/>
    </LinearLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" 
        android:gravity="center"       
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/tvDoctor_my_inform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/doctor_my_inform"/>

        <RadioButton
            android:id="@+id/tvDoctor_my_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/doctor_my_collect" />
    </RadioGroup>
    </LinearLayout>   
    <ListView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"/>

</LinearLayout>